--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,5 +23,10 @@
   "icons": {
     "48": "icons/anchor-48.png",
     "128": "icons/anchor-128.png"
-  }
+  },
+
+  "web_accessible_resources": [ 
+    "content_script.js"
+  ]
 }
+
