Add docs for Chrome and Firefox

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@parcel/config-webextension": "^2.0.1",
     "parcel": "^2.0.1",
+    "web-ext": "^6.5.0",
     "webextension-polyfill": "^0.8.0"
   }
 }
